// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ClientForm create mode matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="overlay"
  >
    <div
      class="modal"
    >
      <div
        class="header"
      >
        <h2>
          clients.form.title
        </h2>
        <button
          aria-label="Fermer"
          class="closeBtn"
        >
          ✕
        </button>
      </div>
      <div
        class="body"
      >
        <form>
          <div
            class="formGroup"
          >
            <label>
              clients.form.name
            </label>
            <input
              placeholder="clients.form.namePlaceholder"
              required=""
              type="text"
              value=""
            />
          </div>
          <div
            class="formGroup"
          >
            <label>
              clients.form.email
            </label>
            <input
              placeholder="clients.form.emailPlaceholder"
              type="email"
              value=""
            />
          </div>
          <div
            class="formRow"
          >
            <div
              class="formGroup"
            >
              <label>
                clients.form.phone
              </label>
              <input
                placeholder="clients.form.phonePlaceholder"
                type="tel"
                value=""
              />
            </div>
            <div
              class="formGroup"
            >
              <label>
                clients.form.siret
              </label>
              <input
                placeholder="clients.form.siretPlaceholder"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="formGroup"
          >
            <label>
              clients.form.address
            </label>
            <input
              placeholder="clients.form.addressPlaceholder"
              type="text"
              value=""
            />
          </div>
        </form>
      </div>
      <div
        class="footer"
      >
        <button
          class="btn secondary  "
        >
          common.cancel
        </button>
        <button
          class="btn primary  "
        >
          common.create
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ClientForm edit mode matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="overlay"
  >
    <div
      class="modal"
    >
      <div
        class="header"
      >
        <h2>
          clients.form.editTitle
        </h2>
        <button
          aria-label="Fermer"
          class="closeBtn"
        >
          ✕
        </button>
      </div>
      <div
        class="body"
      >
        <form>
          <div
            class="formGroup"
          >
            <label>
              clients.form.name
            </label>
            <input
              placeholder="clients.form.namePlaceholder"
              required=""
              type="text"
              value="Acme Corp"
            />
          </div>
          <div
            class="formGroup"
          >
            <label>
              clients.form.email
            </label>
            <input
              placeholder="clients.form.emailPlaceholder"
              type="email"
              value="contact@acme.com"
            />
          </div>
          <div
            class="formRow"
          >
            <div
              class="formGroup"
            >
              <label>
                clients.form.phone
              </label>
              <input
                placeholder="clients.form.phonePlaceholder"
                type="tel"
                value="0600000000"
              />
            </div>
            <div
              class="formGroup"
            >
              <label>
                clients.form.siret
              </label>
              <input
                placeholder="clients.form.siretPlaceholder"
                type="text"
                value="12345678901234"
              />
            </div>
          </div>
          <div
            class="formGroup"
          >
            <label>
              clients.form.address
            </label>
            <input
              placeholder="clients.form.addressPlaceholder"
              type="text"
              value="1 rue de la Paix"
            />
          </div>
        </form>
      </div>
      <div
        class="footer"
      >
        <button
          class="btn secondary  "
        >
          common.cancel
        </button>
        <button
          class="btn primary  "
        >
          common.edit
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
